# lc4

./: .gitignore  CMakeLists.txt  x_app.sh  x_build.sh  x_config.sh  x_tests.sh  xapp.sh  xbuild.sh  xconfig.sh  xtests.sh
src/: main.cpp  solution.cpp  solution.h
test/: CMakeLists.txt  lc4_test.cpp
